Closed
Bug 1665465
Opened 5 years ago
Closed 5 years ago
--enable-perf is broken (allows dumping linux 'perf'-compatible files for JIT code)
Categories
(Core :: JavaScript Engine: JIT, defect, P1)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | fixed |
People
(Reporter: jesup, Assigned: tcampbell)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Compile fails badly with --enable-perf. Adding #include <cstdint> to the PerfSpewer.h file gets it past the 'uint32_t' errors, but then you hit all sorts of other errors.
| Assignee | ||
Comment 1•5 years ago
|
||
Header cleanliness problems. Not user-facing but affects some of our perf/profiling workflows. Regressed by Bug 1664810.
Updated•5 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Keywords: regression
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1664810
status-firefox80:
--- → unaffected
status-firefox81:
--- → unaffected
status-firefox82:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Pushed by tcampbell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/400be4d840c4
Fix missing include on --enable-perf builds. r=jonco
Comment 5•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•