Bug 1665465 - Fix missing include on --enable-perf builds. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D90464